# reddial

./: .gitignore  PLAN.md  README.md  run.sh  scorecard.json
.github/: dependabot.yml
docs/: DEPLOY.md  DEVILS_ADVOCATE_REVIEW.md  LIVE_MODE.md  PRODUCTION_READINESS.md  REFERENCES.md  RUNBOOK.md  SECURITY.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: setup-secrets.sh
server/: .dockerignore  .env.example  API_CONTRACT.md  Dockerfile  INTERFACES.md  Makefile  api.py  attack_library.py  attacker_bot.py  attacker_policy.py  auto_improve.py  bot-gpt.py  bot-nemotron.py  bot.py  campaign_runner.py  cekura_integration.py  docker-compose.yml  efficacy_run.py  env_utils.py  evalset.py  evalset_cekura.py  fake_accounts.py  gepa_mitigation.py  leak_classifier.py  live_agents.py  live_attack.py  loopback.py  mock_backend.py  mock_llm.py  nemotron_llm.py  pcc-deploy.toml  posture.py  preflight.py  pyproject.toml  run_context.py  safety_controls.py  scorecard.py  smoke_voice.py  target_bot.py  test_nemotron_llm.py
server/tests/: conftest.py  test_api.py  test_api_validation.py  test_auto_improve.py  test_campaign_isolation.py  test_cekura_http.py  test_classifier_falsepos.py  test_cors_allowlist.py  test_efficacy.py  test_entrypoint.py  test_evalset.py  test_evalset_cekura.py  test_gepa.py  test_leak_classifier.py  test_leak_classifier_groundtruth.py  test_live_agents.py  test_loopback_breach.py  test_ops.py  test_policy.py  test_posture.py  test_preflight.py  test_reliability.py  test_safety_controls.py  test_safety_edges.py  test_scorecard.py  test_setup_secrets_no_echo.py  test_voice_id_fallback.py  test_voice_smoke.py
server/transcripts/1780165888-5b00/: 0000_authority_pretext.json  0001_instruction_injection.json  0002_escalation_ladder.json  0003_confusion_overload.json  0004_context_reset.json  0005_emotional_urgency.json  0006_impersonation.json  0007_tool_result_phishing.json  0008_format_encoding.json  0009_cvv_minimizer.json  0010_compliance_mirroring.json  0011_memory_poison.json  0012_authority_pretext.json  0013_instruction_injection.json  0014_escalation_ladder.json  0015_confusion_overload.json  0016_context_reset.json  0017_emotional_urgency.json  0018_impersonation.json  0019_tool_result_phishing.json  0020_format_encoding.json  0021_cvv_minimizer.json  0022_compliance_mirroring.json  0023_memory_poison.json  0024_authority_pretext.json  0025_instruction_injection.json  0026_escalation_ladder.json  0027_confusion_overload.json  0028_context_reset.json  0029_emotional_urgency.json  0030_impersonation.json  0031_tool_result_phishing.json  0032_format_encoding.json  0033_cvv_minimizer.json  0034_compliance_mirroring.json  0035_memory_poison.json  0036_authority_pretext.json  0037_instruction_injection.json  0038_escalation_ladder.json  0039_confusion_overload.json  (+20 more)
server/transcripts/1780168772-096d/: 0000_authority_pretext.json  0001_instruction_injection.json  0002_escalation_ladder.json  0003_confusion_overload.json  0004_context_reset.json  0005_emotional_urgency.json
(+40 files in other folders)
