[project]
name = "yc-voice-agent-hackathon"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    # Outbound PSTN dialing (attacker_bot.place_outbound_call). Imported lazily,
    # but MUST be installed for live dialing — previously absent from the lock.
    "twilio>=9.0.0",
    # Used directly at module top by the voice/loopback layer. Previously only
    # present transitively via pipecat; declared explicitly so they are pinned.
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    # Control-plane API (trigger scans, serve scorecards, healthz) + its HTTP client.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    # pytest must be a declared dev dep so `uv sync` installs it into the venv
    # and `uv run pytest` uses the project's interpreter (not a stray system one).
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.coverage.run]
# Coverage measures the deterministic PRODUCT LOGIC. The voice/starter modules
# below are Pipecat pipelines / service wrappers that need live audio + NIM/Twilio
# keys to exercise — they can't be unit-tested here, so they're omitted from the
# floor (covered by the live efficacy run, not CI). Tests themselves are excluded.
omit = [
    "nvidia_stt.py",
    "nemotron_llm.py",
    "target_bot.py",
    "attacker_bot.py",
    "bot-gpt.py",
    "bot-nemotron.py",
    "mock_backend.py",
    "smoke_voice.py",
    "tests/*",
    "test_nemotron_llm.py",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]

[tool.pytest.ini_options]
# Collect only the curated tests/ suite. A bare `pytest` must not try to collect
# the pipecat-dependent test_nemotron_llm.py at the repo root.
testpaths = ["tests"]